[package]
name = "wreckage"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
color-eyre = "0.6.2"
dotenv = "0.15.0"
egui_winit_vulkano = "0.24.0"
image = "0.24.6"
log = "0.4.18"
nalgebra-glm = "0.18.0"
pretty_env_logger = "0.5.0"
smallvec = "1.10.0"
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
winit = "0.28.6"

[profile.dev]
opt-level = 0
overflow-checks = false
debug = true

[profile.release]
opt-level = 3
debug = false
